--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <body>
     <canvas class="webgl"></canvas>
     <button id="create">Create</button>
-    <button id="delete">Delete</button>
+    <button id="delete">Reset</button>
   </body>
 </html>
